inlined svgs and fixed spacing on svg

--- a/src/styles.css
+++ b/src/styles.css
@@ -116,12 +116,18 @@ ul, li {
 
 .contact li {
   margin-bottom: 10px;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
+}
+
+.contact li:hover .icon {
+  fill: var(--accent);
 }
 
 .contact .icon {
-  margin-right: 30px;
+  margin-right: 10px;
   margin-bottom: -5px;
+  height: 20px;
+  width: 20px;
 }
 
 @media (min-width: 640px) {
